--- a/quad/templates/delete_article.html
+++ b/quad/templates/delete_article.html
@@ -1,13 +1,13 @@
-{% extends "base.html" %}
-
+{% extends "base2.html" %}
 {% block content %}
-<fieldset>
-    <legend>Supprimer cet article?</legend>
-    <form action="{{ request.path }}" method="POST">
-        {% csrf_token %}
-        {{ form.errors }}
-        <button class="btn btn-danger" type="submit">Supprimer</button>
-        <a class="btn btn-default" href="{% url 'backoffice' %}">Annuler</a>
-    </form>
-</fieldset>
+<div class="container first-container">
+    <div class="main delete-article">
+        <h1 class="text-center">Supprimer cet article?</h1>
+        <form class="text-center" action="{{ request.path }}" method="POST">
+            {% csrf_token %} {{ form.errors }}
+            <button class="btn btn-danger" type="submit">Supprimer</button>
+            <a class="btn btn-default" href="{% url 'backoffice' %}">Annuler</a>
+        </form>
+    </div>
+</div>
 {% endblock %}
